--- a/LastA3Analise.ipynb
+++ b/LastA3Analise.ipynb
@@ -37,12 +37,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Grupo:**<br>\n",
-        "Gabriel Antonio Lopes de Castro - 1272023100<br>\n",
-        "Andre Argiles Azoubel - 127201913<br>\n",
-        "Luiz Henrique Dantas de Santana - 1272019436<br>\n",
-        "Rodrigo Pitagoras Santos Lopes - 1272019853<br>\n",
-        "Jose Victor das Virgens Ferreira - 12720110200"
+        "\n",
+        "Gabriel Antonio Lopes de Castro - 1272023100<br>"
       ],
       "metadata": {
         "id": "RsUku8pZy5tG"
